--- a/css/main.css
+++ b/css/main.css
@@ -1001,7 +1001,7 @@ margin-top: 6px;
 	margin-right: 20px;
 }
 .pricing-link a {
-	background: #3c3b3b;
+	background:rgb(110, 161, 23);
 	padding: 14px 26px;
 	color: #fff;
 	text-transform: capitalize;
