--- a/admin/assets/css/hm-style.css
+++ b/admin/assets/css/hm-style.css
@@ -7,7 +7,7 @@ Screen style's
 .menu-container {
   width:100%;
   margin: 0 auto;
-  background:#3d4c5a;
+  background:#000000;
   position:fixed;
   top:54px;
   z-index:10;
